--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "toomanysessions"
-version = "0.1.5"
+version = "0.1.6"
 description = ""
 authors = [
     {name = "genderlesspit",email = "59433707+genderlesspit@users.noreply.github.com"}
@@ -12,7 +12,8 @@ dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "starlette (>=0.47.2,<0.48.0)",
     "toomanyports (>=0.1.1,<0.2.0)",
-    "loguru (>=0.7.3,<0.8.0)"
+    "loguru (>=0.7.3,<0.8.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 [tool.poetry]
