--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "toomanysessions"
-version = "0.1.9940"
+version = "0.1.9951"
 description = ""
 authors = [
     {name = "Miles Copeland Luce"}
@@ -16,7 +16,8 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "jinja2 (>=3.1.6,<4.0.0)",
     "pkce (>=1.0.3,<2.0.0)",
-    "toomanyconfigs (>=0.2.3,<0.3.0)"
+    "toomanyconfigs (>=0.2.7,<0.3.0)",
+    "bcrypt (>=4.3.0,<5.0.0)"
 ]
 
 [tool.poetry]
