--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "toomanysessions"
-version = "0.1.9956"
+version = "0.1.9960"
 description = ""
 authors = [
     {name = "Miles Copeland Luce"}
@@ -16,9 +16,10 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "jinja2 (>=3.1.6,<4.0.0)",
     "pkce (>=1.0.3,<2.0.0)",
-    "toomanyconfigs (>=0.2.82,<0.3.0)",
+    "toomanyconfigs (>=0.2.83,<0.3.0)",
     "bcrypt (>=4.3.0,<5.0.0)",
-    "fastj2 (>=0.1.11,<0.2.0)"
+    "fastj2 (>=0.1.11,<0.2.0)",
+    "pyzurecli (>=0.7.404,<0.8.0)"
 ]
 
 [tool.poetry]
